added toString method to board, tile classes. Now tests are work fine